--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
+    "react-type-animation": "^3.1.0",
     "react-vis": "^1.12.1"
   }
 }
